// Kreatip — Database Schema
// Auto-generated by cmd/dbml — DO NOT EDIT MANUALLY
// Run: go run ./cmd/dbml -open

Project kreatip {
  database_type: 'PostgreSQL'
  Note: 'Donation platform for creators & streamers'
}

Table users {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, default: 'user']
  email_verified boolean [not null, default: `FALSE`]
  totp_secret varchar(64)
  totp_enabled boolean [not null, default: `FALSE`]
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]
  deleted_at timestamp

  indexes {
    deleted_at
  }
}

Table creator_profiles {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null, unique]
  username varchar(30) [not null, unique]
  display_name varchar(100) [not null]
  avatar_url varchar(500)
  bio text
  social_links jsonb [not null, default: '{}']
  theme_color varchar(7) [not null, default: '#6366f1']
  min_donation bigint [not null, default: `1000`]
  max_donation bigint [not null, default: `10000000`]
  thank_you_message text [not null, default: 'Terima kasih atas dukungannya!']
  is_active boolean [not null, default: `TRUE`]
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]

  indexes {
    is_active
  }
}

Table wallets {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null, unique]
  currency varchar(3) [not null, default: 'IDR']
  balance_available bigint [not null, default: `0`]
  balance_pending bigint [not null, default: `0`]
  last_reconciled_at timestamp
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]
}

Table refresh_tokens {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null]
  token_hash varchar(64) [not null, unique]
  user_agent varchar(500) [not null, default: '']
  ip varchar(45) [not null, default: '']
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `NOW()`]

  indexes {
    user_id
    expires_at
  }
}

Table alert_tokens {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null]
  token varchar(64) [not null, unique]
  settings jsonb [not null, default: '{}']
  revoked_at timestamp
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]

  indexes {
    user_id
  }
}

Table bank_accounts {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null]
  type varchar(10) [not null]
  bank_code varchar(20) [not null]
  account_number varchar(30) [not null]
  account_holder_name varchar(100) [not null]
  is_verified boolean [not null, default: `FALSE`]
  is_default boolean [not null, default: `FALSE`]
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]
  deleted_at timestamp

  indexes {
    user_id
    deleted_at
  }
}

Table donations {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  creator_id uuid [not null]
  donor_name varchar(100)
  donor_email varchar(255)
  amount bigint [not null]
  platform_fee bigint [not null, default: `0`]
  payment_fee bigint [not null, default: `0`]
  net_amount bigint [not null]
  message text
  status varchar(20) [not null, default: 'pending']
  currency varchar(3) [not null, default: 'IDR']
  paid_at timestamp
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]
  deleted_at timestamp

  indexes {
    (creator_id, status, created_at)
    (status, created_at)
    deleted_at
  }
}

Table payments {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  donation_id uuid [not null, unique]
  provider varchar(30) [not null]
  method varchar(30) [not null]
  external_id varchar(255) [not null, default: '']
  external_status varchar(50) [not null, default: '']
  checkout_url varchar(500)
  raw_request jsonb [not null, default: '{}']
  raw_response jsonb [not null, default: '{}']
  expires_at timestamp
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]

  indexes {
    external_id
  }
}

Table ledger_entries {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  wallet_id uuid [not null]
  account varchar(50) [not null]
  direction varchar(10) [not null]
  amount bigint [not null]
  ref_type varchar(30) [not null]
  ref_id uuid [not null]
  description varchar(255) [not null, default: '']
  occurred_at timestamp [not null, default: `NOW()`]

  indexes {
    (wallet_id, occurred_at)
    (ref_type, ref_id)
  }
}

Table withdrawals {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  user_id uuid [not null]
  bank_account_id uuid [not null]
  amount bigint [not null]
  fee bigint [not null, default: `0`]
  net_amount bigint [not null]
  status varchar(20) [not null, default: 'requested']
  external_id varchar(255)
  failure_reason text
  approved_by uuid
  approved_at timestamp
  completed_at timestamp
  created_at timestamp [not null, default: `NOW()`]
  updated_at timestamp [not null, default: `NOW()`]
  deleted_at timestamp

  indexes {
    (user_id, status)
    (status, created_at)
    deleted_at
  }
}

Table webhook_events {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  provider varchar(30) [not null]
  event_type varchar(50) [not null]
  external_id varchar(255) [not null, default: '']
  idempotency_key varchar(255) [not null, unique]
  payload jsonb [not null, default: '{}']
  processed boolean [not null, default: `FALSE`]
  error text
  received_at timestamp [not null, default: `NOW()`]
  processed_at timestamp

  indexes {
    (provider, external_id)
    received_at
  }
}

Table audit_logs {
  id uuid [not null, default: `gen_random_uuid()`, pk]
  actor_user_id uuid
  action varchar(50) [not null]
  resource_type varchar(50)
  resource_id uuid
  metadata jsonb [not null, default: '{}']
  ip varchar(45) [not null, default: '']
  occurred_at timestamp [not null, default: `NOW()`]

  indexes {
    actor_user_id
    action
    occurred_at
  }
}

Ref: creator_profiles.user_id - users.id [delete: cascade]
Ref: wallets.user_id - users.id [delete: cascade]
Ref: refresh_tokens.user_id > users.id [delete: cascade]
Ref: alert_tokens.user_id > users.id [delete: cascade]
Ref: bank_accounts.user_id > users.id [delete: cascade]
Ref: donations.creator_id > creator_profiles.id
Ref: payments.donation_id - donations.id
Ref: ledger_entries.wallet_id > wallets.id
Ref: withdrawals.user_id > users.id
Ref: withdrawals.bank_account_id > bank_accounts.id
Ref: withdrawals.approved_by > users.id
Ref: audit_logs.actor_user_id > users.id [delete: set null]
